# peanuts

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  conanfile.py  main.cpp
dummy_lib/: CMakeLists.txt
dummy_lib/include/: dummy.h
dummy_lib/test/: CMakeLists.txt
dummy_module/: CMakeLists.txt
dummy_module/source/: dummy.cpp
dummy_module/test/: CMakeLists.txt  test.cpp
logger/: CMakeLists.txt
logger/include/: format.h  logger.h  logger_base.h  manip.h  manipulator.h  preset.h
logger/source/: logger.cpp  logger_base.cpp  manip.cpp  manipulator.cpp  preset.cpp
logger/test/: CMakeLists.txt  test.cpp
scripts/: build_w_tests.bat  build_w_tests.sh  conan_build.bat  conan_build.sh
scripts/configs/: windows_default_conan_profile
tester/: CMakeLists.txt  README.md
tester/include/: grouping.h  handler.h  test.h  tester.h
tester/source/: grouping.cpp  handler.cpp  test.cpp  tester.cpp
tester/test/: CMakeLists.txt  basic-test.cpp
